nes-systests/systest/tests/testdata/errors/result/ExpectedEmptyButResultIsNot.dummy
Source stream UINT64 id INLINE
1

SINK CORRECT_SINK UINT64 stream$id
SELECT id FROM stream WHERE id >= UINT64(1) INTO CORRECT_SINK
----
1

SINK INCORRECT_SINK UINT64 stream$id
SELECT id FROM stream WHERE id >= UINT64(1) INTO INCORRECT_SINK
----

